Update JavaFXBaseMojo.java